# toukei

./: CMakeLists.txt
libtoukei/: CMakeLists.txt  ankidb.cpp  ankidb.hpp  deck.cpp  deck.hpp
toukei-cli/: CMakeLists.txt  cli.cpp
toukei-qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  toukei-qt.pro
